--- a/index.html
+++ b/index.html
@@ -7,13 +7,36 @@
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+            <!-- google font poppins -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+                <!-- tailwind customs class -->
+            <script>
+              tailwind.config = {
+                theme: {
+                  extend: {
+                    colors: {
+                      clifford: '#da373d',
+                      'bike-primary': '#E76F51',
+                      'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
+                    }
+                  }
+                }
+              }
+            </script>
+            <style>
+                .font-poppins{
+                    font-family: 'Poppins', sans-serif;
+                }
+            </style>
     
 </head>
-<body>
-    <header>
+<body class="font-poppins">
+    <header class="md:container md:max-auto">
         <nav>
             <div class="navbar bg-base-100">
-        <div class="navbar-start">
+        <div class="flex-1">
                  <div class="dropdown">
          <label tabindex="0" class="btn btn-ghost lg:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
@@ -25,21 +48,140 @@
          <li><a>Contact</a></li>
       </ul>
     </div>
-    <a class="btn btn-ghost normal-case text-xl">Biker Zone</a>
+    <a class="btn btn-ghost normal-case text-4xl">Biker Zone</a>
   </div>
   <div class="navbar-center hidden lg:flex">
-    <ul class="menu menu-horizontal px-1">
+    <ul class="menu  text-xl menu-horizontal px-1">
       <li><a>Home</a></li>
       <li><a>Shop</a></li>
       <li><a>News</a></li>  
       <li><a>Contact</a></li>
     </ul>
   </div>
-  <div class="navbar-end">
-    <a class="btn btn-error">Login</a>
+  <div class="">
+    <a class="btn btn-primary bg-bike-primary text-white">Login</a>
   </div>
 </div>
         </nav>
+        <!-- slider or carousel -->
+        <div class="carousel h-[550px] w-full bg-bike-primary-bg">
+                          <!-- slide1 -->
+          <div id="slide1" class="carousel-item relative  w-full">
+            <div class="flex  flex-col lg:flex-row p-24 gap-25px">
+              <div class="space-y-7">
+                 <h2 class="text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                 <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+
+              </div>
+              <div>
+                <img src="./images/slider/bike1.png" class="w-full" />
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide4" class="btn btn-circle">❮</a> 
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+                          <!-- slide2 -->
+          <div id="slide2" class="carousel-item relative w-full">
+            <div class="flex  flex-col lg:flex-row p-24 gap-25px">
+              <div class="space-y-7">
+                 <h2 class="text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                 <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+
+              </div>
+              <div>
+                <img src="./images/slider/bike2.png" class="w-full" />
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+                          <!-- slide3 -->
+          <div id="slide3" class="carousel-item relative w-full">
+            <div class="flex  flex-col lg:flex-row p-24 gap-25px">
+              <div class="space-y-7">
+                 <h2 class="text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                 <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+
+              </div>
+              <div>
+                <img src="./images/slider/bike3.png" class="w-full" />
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+                            <!-- slide4 -->
+          <div id="slide4" class="carousel-item relative w-full">
+            <div class="flex  flex-col lg:flex-row p-24 gap-25px">
+              <div class="space-y-7">
+                 <h2 class="text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                 <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+
+              </div>
+              <div>
+                <img src="./images/slider/bike4.png" class="w-full" />
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide3" class="btn btn-circle">❮</a> 
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
+
     </header>
+    <section class="md:container md:max-auto">
+          <!-- features bike -->
+    </section>
+                  <!-- latest bike -->
+    <section class="my-24">
+          <h3 class=" text-5xl font-semibold text-center">latest News</h3>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <div class="card card-compact w-96 bg-base-100 shadow-xl">
+              <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions ">
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+                </div>
+              </div>
+            </div>
+            <div class="card card-compact w-96 bg-base-100 shadow-xl">
+              <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions ">
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+                </div>
+              </div>
+            </div>
+            <div class="card card-compact w-96 bg-base-100 shadow-xl">
+              <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions ">
+                  <a class="btn btn-primary bg-bike-primary text-white">Purchase</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
 </body>
 </html>
